@@ -1,3 +1,4 @@
+10/7/10 absorb color strategy into BoxNode, delete IBoxColorStrategy
 10/7/10 delete unused box coloring strategies, since we seem to have settled on this
 10/7/10 order dielectrics in combo box by increasing dielectric constant
 10/7/10 increase max spacing between positive and negative charges in dielectric charge pairs
